--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="section-2">
             <div class="width-60 justify-flex-end">
-                <img class="img-2 shadow" src="download.jpg" alt="image">               
+                <img id="clicks" class="img-2 shadow" src="download.jpg" alt="image">               
             </div> 
             <div class="width-40 center">
                 <div class="writings-2">
@@ -46,5 +46,12 @@
             </div>            
         </div>
     </div>
+
+    <script>
+        document.getElementById('clicks').addEventListener('click', function() {
+            location.href = 'https://www.google.com'
+        }, false);
+    </script>
+
 </body>
 </html>
